// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "opencode/glm-4.7-free",
    },
    "explore": {
      "model": "opencode/glm-4.7-free",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "prometheus": {
      "model": "opencode/glm-4.7-free",
    },
    "sisyphus": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models when only Claude is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "high",
    },
    "prometheus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "sisyphus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "anthropic/claude-opus-4-5",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "high",
    },
    "prometheus": {
      "model": "anthropic/claude-opus-4-5",
    },
    "sisyphus": {
      "model": "anthropic/claude-opus-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "openai/gpt-5.2",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5.2",
    },
    "oracle": {
      "model": "openai/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "openai/gpt-5.2",
    },
    "sisyphus": {
      "model": "openai/gpt-5.2",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
      "variant": "max",
    },
    "quick": {
      "model": "openai/gpt-5.1-codex-mini",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2",
    },
    "visual-engineering": {
      "model": "openai/gpt-5.2",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "openai/gpt-5.2",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5.2",
    },
    "oracle": {
      "model": "openai/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "openai/gpt-5.2",
    },
    "sisyphus": {
      "model": "openai/gpt-5.2",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
      "variant": "max",
    },
    "quick": {
      "model": "openai/gpt-5.1-codex-mini",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2",
    },
    "visual-engineering": {
      "model": "openai/gpt-5.2",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "google/gemini-3-flash-preview",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "google/gemini-3-pro-preview",
    },
    "oracle": {
      "model": "google/gemini-3-pro-preview",
      "variant": "high",
    },
    "prometheus": {
      "model": "google/gemini-3-flash-preview",
    },
    "sisyphus": {
      "model": "google/gemini-3-flash-preview",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro-preview",
      "variant": "max",
    },
    "quick": {
      "model": "google/gemini-3-flash-preview",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro-preview",
    },
    "unspecified-high": {
      "model": "google/gemini-3-flash-preview",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash-preview",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro-preview",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "google/gemini-3-pro-preview",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "google/gemini-3-pro-preview",
    },
    "oracle": {
      "model": "google/gemini-3-pro-preview",
      "variant": "high",
    },
    "prometheus": {
      "model": "google/gemini-3-pro-preview",
    },
    "sisyphus": {
      "model": "google/gemini-3-pro-preview",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro-preview",
      "variant": "max",
    },
    "quick": {
      "model": "google/gemini-3-flash-preview",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro-preview",
    },
    "unspecified-high": {
      "model": "google/gemini-3-pro-preview",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash-preview",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro-preview",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "google/gemini-3-pro-preview",
    },
    "oracle": {
      "model": "openai/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "sisyphus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro-preview",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro-preview",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models with isMax20 flag when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "anthropic/claude-opus-4-5",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "google/gemini-3-pro-preview",
    },
    "oracle": {
      "model": "openai/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "anthropic/claude-opus-4-5",
    },
    "sisyphus": {
      "model": "anthropic/claude-opus-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro-preview",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro-preview",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "opencode/gemini-3-pro",
    },
    "oracle": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "sisyphus": {
      "model": "opencode/claude-sonnet-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "opencode/claude-opus-4-5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "opencode/gemini-3-pro",
    },
    "oracle": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "opencode/claude-opus-4-5",
    },
    "sisyphus": {
      "model": "opencode/claude-opus-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-5",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "github-copilot/gpt-5.2",
    },
    "multimodal-looker": {
      "model": "github-copilot/gemini-3-pro-preview",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "sisyphus": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "max",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro-preview",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "github-copilot/claude-opus-4.5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "github-copilot/gpt-5.2",
    },
    "multimodal-looker": {
      "model": "github-copilot/gemini-3-pro-preview",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "github-copilot/claude-opus-4.5",
    },
    "sisyphus": {
      "model": "github-copilot/claude-opus-4.5",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "max",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro-preview",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "zai-coding-plan/glm-4.7",
      "variant": "high",
    },
    "prometheus": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "sisyphus": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
  "categories": {
    "artistry": {
      "model": "zai-coding-plan/glm-4.7",
      "variant": "max",
    },
    "quick": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "ultrabrain": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "unspecified-high": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "unspecified-low": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "zai-coding-plan/glm-4.7",
      "variant": "high",
    },
    "prometheus": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "sisyphus": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
  "categories": {
    "artistry": {
      "model": "zai-coding-plan/glm-4.7",
      "variant": "max",
    },
    "quick": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "ultrabrain": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "unspecified-high": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "unspecified-low": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + OpenCode Zen combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "high",
    },
    "prometheus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "sisyphus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "openai/gpt-5.2",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "github-copilot/gpt-5.2",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5.2",
    },
    "oracle": {
      "model": "openai/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "openai/gpt-5.2",
    },
    "sisyphus": {
      "model": "openai/gpt-5.2",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
      "variant": "max",
    },
    "quick": {
      "model": "openai/gpt-5.1-codex-mini",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2",
    },
    "visual-engineering": {
      "model": "openai/gpt-5.2",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + ZAI combination (librarian uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "high",
    },
    "prometheus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "sisyphus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Gemini + Claude combination (explore uses Gemini) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "multimodal-looker": {
      "model": "google/gemini-3-pro-preview",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "high",
    },
    "prometheus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "sisyphus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro-preview",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro-preview",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "opencode/gemini-3-pro",
    },
    "oracle": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "sisyphus": {
      "model": "opencode/claude-sonnet-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "explore": {
      "model": "opencode/grok-code",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "google/gemini-3-pro-preview",
    },
    "oracle": {
      "model": "openai/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "sisyphus": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro-preview",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro-preview",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "atlas": {
      "model": "anthropic/claude-opus-4-5",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "google/gemini-3-pro-preview",
    },
    "oracle": {
      "model": "openai/gpt-5.2-codex",
      "variant": "high",
    },
    "prometheus": {
      "model": "anthropic/claude-opus-4-5",
    },
    "sisyphus": {
      "model": "anthropic/claude-opus-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro-preview",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro-preview",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;
